Removed overflow:auto on div.editcontents to fix issue 116

--- a/wubwikit/docroot/css/wikit.css
+++ b/wubwikit/docroot/css/wikit.css
@@ -315,7 +315,7 @@ del {
 
 div.edit {
   background: #DDD;
-  overflow: auto;
+  /*overflow: auto;*/
 }
 
 div.editcontents {
